<resources>
    <string name="app_name">Мой день</string>
    <string name="citation">Вы должны выучить правила игры. А затем вы должны играть лучше, чем кто-либо другой</string>
    <string name="author">Альберт Эйнштейн</string>
    <string name="add">Добавить</string>
    <string name="calendar">Календарь</string>
    <string name="statistics">Статистика</string>
    <string name="diary">Дневник</string>
    <string name="writing">Записи</string>
    <string name="settings">Настройки</string>
    <string name="cancel">Закрыть</string>
    <string name="today">Сегодня</string>
    <string name="this_day_has_not_come">Этот день еще не наступил</string>
    <string name="next">Далее</string>
    <string name="choose_data">Выбрать дату</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="training">Тренировки</string>
    <string name="count_water">Количество выпитой воды</string>
    <string name="count_important_day">Количество важных задач</string>
    <string name="effective_day">Продуктивность дня</string>
    <string name="achievements">Достижения</string>
    <string name="firstlySelectCountOfPlannedTasks">Сначала укажите количество запланированных задач</string>
    <string name="incorrectCountOfComletedTasks">Количество выполненных задач не может быть больше запланированных</string>
    <string name="filter">Фильтр</string>
    <string name="thoughts">Мысли</string>
    <string name="percent"> %</string>
    <string name="liter"> л</string>
    <string name="hour"> ч</string>
    <string name="month_1"> января</string>
    <string name="month_2"> февраля</string>
    <string name="month_3"> марта</string>
    <string name="month_4"> апреля</string>
    <string name="month_5"> мая</string>
    <string name="month_6"> июня</string>
    <string name="month_7"> июля</string>
    <string name="month_8"> августа</string>
    <string name="month_9"> сентября</string>
    <string name="month_10"> октября</string>
    <string name="month_11"> ноября</string>
    <string name="month_12"> декабря</string>
    <string name="add_training">добавить тренировку</string>
    <string name="trainings">Тренировки</string>
    <string name="sleep">сон</string>
    <string name="smile">смайл</string>
    <string name="effective">эффективность</string>
    <string name="water">вода</string>
    <string name="filters">фильтры</string>
    <string name="close_filters">закрыть фильтры</string>
    <string name="empty">пусто</string>
    <string name="after_70">от 70%</string>
    <string name="middle_effectiveness">40% - 70%</string>
    <string name="before_40">до 40%</string>
    <string name="filter_by_effectiveness">Фильтр по продуктивности</string>
    <string name="by">по</string>
    <string name="with">с</string>
    <string name="filter_by_data">Фильтр по дате</string>
    <string name="thoughts_tittle">Мысли</string>
    <string name="close_choice_day">закрыть выбор дня</string>
    <string name="delete">удалить тренировку</string>
    <string name="training_tittle">Тренировка</string>
    <string name="btn_back">кнопка назад</string>
    <string name="achivements_something">Посадил дерево ...</string>
    <string name="thoughts_something">Дорогой дневник ...</string>
    <string name="done">готово</string>
    <string name="condition">Состояние</string>
    <string name="count_hours">Количество сна (ч)</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="cup">cup</string>
    <string name="planing">ЗАПЛАНИРОВАННЫХ</string>
    <string name="complete">ВЫПОЛНЕННЫХ</string>
    <string name="kg">кг</string>
    <string name="sm">см</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="today_weight">Сегодняшний вес</string>
    <string name="today_height">Сегодняшний рост</string>
    <string name="all_day">Все дни</string>
</resources>