<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".Presentation.statistics.StatisticsFragment">

    <TextView
        android:id="@+id/tv_tittle_thoughts"
        style="@style/TittleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tittle_thoughts" />

    <EditText
        android:id="@+id/et_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:inputType="number"
        android:textSize="20sp"
        android:maxLength="3"
        android:textColor="@color/black"
        android:textColorHint="@color/grow"
        app:layout_constraintEnd_toStartOf="@+id/et_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/et_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:hint="@string/height"
        android:inputType="number"
        android:maxLength="3"
        android:textColor="@color/black"
        android:textColorHint="@color/grow"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_weight"
        app:layout_constraintTop_toTopOf="@+id/et_weight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kg"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_weight"
        app:layout_constraintStart_toEndOf="@+id/et_weight"
        app:layout_constraintTop_toTopOf="@+id/et_weight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sm"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_height"
        app:layout_constraintStart_toEndOf="@+id/et_height"
        app:layout_constraintTop_toTopOf="@+id/et_height"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:id="@+id/all_day_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_day"
        android:layout_marginTop="16dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_weight" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_parameters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/all_day_tittle"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/pattern_parameters" />


</androidx.constraintlayout.widget.ConstraintLayout>