<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/back"
    tools:context=".Presentation.writing.FilterForDaysFragment">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/filter_by_data"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="12dp"
        android:background="@color/grow"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="12dp"
        android:background="@color/grow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@color/grow"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@color/grow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:gravity="center_vertical"
        android:text="@string/with"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/np_filter_start_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:gravity="center_vertical"
        android:text="@string/by"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/np_filter_end_month"
        app:layout_constraintStart_toEndOf="@+id/np_filter_start_year"
        app:layout_constraintTop_toTopOf="@+id/np_filter_start_year" />

    <NumberPicker
        android:id="@+id/np_filter_start_year"
        android:layout_width="60dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/np_filter_start_month"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <NumberPicker
        android:id="@+id/np_filter_start_month"
        android:layout_width="60dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toStartOf="@+id/np_filter_start_year"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <NumberPicker
        android:id="@+id/np_filter_end_month"
        android:layout_width="60dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toStartOf="@+id/np_filter_end_year"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <NumberPicker
        android:id="@+id/np_filter_end_year"
        android:layout_width="60dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/np_filter_end_month"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/filter_by_effectiveness"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/cb_effectiveness_before_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/before_40"
        android:textStyle="bold"
        android:textColor="@color/effectiveness_1"
        app:layout_constraintEnd_toStartOf="@+id/cb_effectiveness_middle"
        app:layout_constraintStart_toEndOf="@+id/cb_effectiveness_empty"
        app:layout_constraintTop_toTopOf="@+id/cb_effectiveness_empty" />

    <CheckBox
        android:id="@+id/cb_effectiveness_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/middle_effectiveness"
        android:textStyle="bold"
        android:textColor="@color/effectiveness_2"
        app:layout_constraintEnd_toStartOf="@+id/cb_effectiveness_after_70"
        app:layout_constraintStart_toEndOf="@+id/cb_effectiveness_before_40"
        app:layout_constraintTop_toTopOf="@+id/cb_effectiveness_before_40" />

    <CheckBox
        android:id="@+id/cb_effectiveness_after_70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/after_70"
        android:textStyle="bold"
        android:textColor="@color/effectiveness_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cb_effectiveness_middle"
        app:layout_constraintTop_toTopOf="@+id/cb_effectiveness_middle" />

    <CheckBox
        android:id="@+id/cb_effectiveness_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/cb_effectiveness_before_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/btn_close_filter_fragment"
        android:layout_width="32dp"
        android:layout_height="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_arrow_up"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_effectiveness_empty"
        android:contentDescription="@string/close_filters" />


</androidx.constraintlayout.widget.ConstraintLayout>