<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".Presentation.training.AddEditTraining">

    <ImageButton
        android:id="@+id/btn_back_training"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/training_tittle"
        android:contentDescription="@string/btn_back" />

    <ImageButton
        android:id="@+id/btn_delete_training_day"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/training_tittle" />

    <TextView
        android:id="@+id/training_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training_tittle"
        style="@style/TittleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/training_tittle"
        tools:text="17.12.2022" />

    <EditText
        android:id="@+id/et_training"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/data"
        tools:layout_editor_absoluteX="0dp"
        android:inputType="textCapSentences|textMultiLine" />


</androidx.constraintlayout.widget.ConstraintLayout>